# advent-of-code

./: .gitignore
2023/Day 01/Ex 1/: main.hs
2023/Day 01/Ex 2/: main.hs
2023/Day 02/Ex 2/: Ex2.cabal
2023/Day 03/Ex 2/: Ex2.cabal
2023/Day 04/Ex 1/: Ex1.cabal
2023/Day 06/Ex 2/: Ex2.cabal
2023/Day 07/Ex 1/: Ex1.cabal
2023/Day 07/Ex 2/: Ex2.cabal
2023/Day 08/Ex 1/: Ex1.cabal
2023/Day 09/Ex 2/: Ex2.cabal
2023/Day 10/: test.txt
2023/Day 10/Ex 1/: Ex1.cabal
2023/Day 10/Ex 2/: Ex2.cabal
2023/Day 14/Ex 2/: Ex2.cabal
2023/Day 15/Ex 2/: Ex2.cabal
2023/Day 16/Ex 1/: Ex1.cabal
2023/Day 16/Ex 2/: Ex2.cabal
2024/Day 01/Ex 1/: Ex1.cabal
2024/Day 03/Ex 1/: Ex1.cabal
2024/Day 08/Ex 1/: Ex1.cabal
2024/Day 14/Ex 2/: Ex2.cabal
2024/Day 14/Ex 2/app/: Main.hs
2024/Day 17/: test.txt
2025/: 2025.sln
2025/Day 01/: Day 01.cpp  Day 01.vcxproj  Day 01.vcxproj.filters
2025/Day 02/: Day 02.cpp  Day 02.vcxproj  Day 02.vcxproj.filters
2025/Day 03/: Day 03.cpp  Day 03.vcxproj  Day 03.vcxproj.filters
2025/Day 04/: Day 04.cpp  Day 04.vcxproj  Day 04.vcxproj.filters
2025/Day 05/: Day 05.cpp  Day 05.vcxproj  Day 05.vcxproj.filters
2025/Day 06/: Day 06.cpp  Day 06.vcxproj  Day 06.vcxproj.filters
2025/Day 07/: Day 07.cpp  Day 07.vcxproj  Day 07.vcxproj.filters
2025/Day 08/: Day 08.cpp  Day 08.vcxproj  Day 08.vcxproj.filters
2025/Day 09/: Day 09.cpp  Day 09.vcxproj  Day 09.vcxproj.filters
2025/Day 10/: Day 10.cpp  Day 10.vcxproj  Day 10.vcxproj.filters
2025/Day 11/: Day 11.cpp  Day 11.vcxproj  Day 11.vcxproj.filters
(+78 files in other folders)
