cabal-version:      2.4
name:               Ex2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mathis Chaptinel
maintainer:         mathis.chaptinel@gmail.com

-- A copyright notice.
-- copyright:
-- category:

executable Ex2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        extra,
        containers,
        mtl,
    hs-source-dirs:   app
    default-language: Haskell2010